2004-11-23  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Clean up external file DND.

2004-11-20  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-model.c:
	(pointer_list_model_row_draggable), (put_before),
	(pointer_list_model_insert), (pointer_list_model_has_first):
	* libmuine/pointer-list-model.h:
	* libmuine/pointer-list-view.c: (pointer_list_view_class_init),
	(pointer_list_view_init), (pointer_list_view_insert),
	(pointer_list_view_is_first), (pointer_list_view_select):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/CoverImage.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:
	* src/StringUtils.cs:

	DND support all over the place. Inspired by a patch by
	Sean Egan <seanegan@gmail.com>.

2004-11-18  Jorn Baayen  <jbaayen@gnome.org>

	* src/NotificationAreaIcon.cs:

	Use new stock icon names.

2004-11-18  Jorn Baayen  <jbaayen@gnome.org>

	* data/images/Makefile.am:
	* data/images/muine-add-album-16.png:
	* data/images/muine-add-album.png:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/StockIcons.cs:

	Use gnome-dev-cdrom-audio stock icon.

2004-11-17  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Depend on gnome-icon-theme.

2004-11-17  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Correct bugs from last commit.

2004-11-17  Jorn Baayen  <jbaayen@gnome.org>

	* data/images/Makefile.am:
	* data/images/muine-forward.png:
	* data/images/muine-next-16.png:
	* data/images/muine-next.png:
	* data/images/muine-pause-16.png:
	* data/images/muine-pause.png:
	* data/images/muine-play-16.png:
	* data/images/muine-play.png:
	* data/images/muine-previous-16.png:
	* data/images/muine-previous.png:
	* data/images/muine-queue.png:
	* data/images/muine-rewind.png:
	* data/images/muine-shuffle-16.png:
	* data/images/muine-shuffle.png:
	* data/images/muine-volume-max.png:
	* data/images/muine-volume-medium.png:
	* data/images/muine-volume-min.png: